# interface-tools

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: routes.json
docs/source/: conf.py  index.rst
interface_tools/: score.py
interface_tools/infrastructure/: AzureML.py  DataHandler.py  DataHandler2.py  DataHandlerAzureFileShare.py  DataHandlerAzureML.py  DataHandlerAzureML2.py  DataHandlerLocal.py  DataHandlerLocal2.py  data_definitions.py  experiment_logger.py
interface_tools/runners/: DataFrameRunner.py
interface_tools/utils/: config_utils.py  formatting.py
tests/infrastructure/: test_DataHandlerLocal.py  test_experiment_logger.py
tests/utils/: test_config_utils.py
